version/dev/_sources/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/DataModel/Enums/RigidBodyTransformationType.rst.txt
.. vale off



:class:`RigidBodyTransformationType`
====================================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.Mechanical.DataModel.Enums.RigidBodyTransformationType

   Bases: :py:obj:`enum.Enum`


   
   Generic enumeration.

   Derive from this class to define new enumerations.















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: RigidBodyTransformationType

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~CoordinateSystem`
            - 
          * - :py:attr:`~OriginAndEulerAngles`
            - 








Attribute detail
----------------
.. py:attribute:: CoordinateSystem
   :value: 1


.. py:attribute:: OriginAndEulerAngles
   :value: 0






.. vale on